--- a/tablook/src/home/search-module/components/search/search.component.scss
+++ b/tablook/src/home/search-module/components/search/search.component.scss
@@ -1,7 +1,7 @@
 app-search {
 	.search-wrapper {
 		display: grid;
-		grid-template-columns: 1fr 4fr;
+		grid-template-columns: auto 1fr;
 
 		& > div {
 			max-height: 89vh;
